--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.1",
     "autoprefixer": "^9.4.10",
+    "babel-loader": "^7.1.5",
     "browser-sync": "^2.26.3",
     "del": "^4.0.0",
     "gulp": "3.9.1",
@@ -14,9 +17,11 @@
     "gulp-rename": "^1.4.0",
     "gulp-svg-sprite": "^1.3.1",
     "gulp-watch": "^5.0.1",
+    "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^12.0.1",
     "postcss-mixins": "^6.2.1",
     "postcss-nested": "^4.1.2",
-    "postcss-simple-vars": "^5.0.2"
+    "postcss-simple-vars": "^5.0.2",
+    "webpack": "^4.29.6"
   }
 }
