--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.1",
     "autoprefixer": "^9.4.10",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.3",
     "del": "^4.0.0",
     "gulp": "3.9.1",
@@ -17,6 +19,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-svg-sprite": "^1.3.1",
     "gulp-watch": "^5.0.1",
+    "jquery-smooth-scroll": "^2.2.0",
     "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^12.0.1",
     "postcss-mixins": "^6.2.1",
