--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-svg-sprite": "^1.3.1",
     "gulp-watch": "^5.0.1",
     "jquery-smooth-scroll": "^2.2.0",
+    "lazysizes": "^4.1.7",
     "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^12.0.1",
     "postcss-mixins": "^6.2.1",
