--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "browser-sync": "^2.26.3",
     "del": "^4.0.0",
     "gulp": "3.9.1",
+    "gulp-modernizr": "^3.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-svg-sprite": "^1.3.1",
+    "gulp-svg2png": "^0.3.0",
     "gulp-watch": "^5.0.1",
     "jquery-smooth-scroll": "^2.2.0",
     "lazysizes": "^4.1.7",
+    "picturefill": "^3.0.3",
     "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^12.0.1",
     "postcss-mixins": "^6.2.1",
