--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "browser-sync": "^2.26.3",
     "del": "^4.0.0",
     "gulp": "3.9.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^5.0.3",
     "gulp-modernizr": "^3.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-rev": "^9.0.0",
     "gulp-svg-sprite": "^1.3.1",
     "gulp-svg2png": "^0.3.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-usemin": "^0.3.29",
     "gulp-watch": "^5.0.1",
     "jquery-smooth-scroll": "^2.2.0",
     "lazysizes": "^4.1.7",
